--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <header>Etch-a-Sketch</header>
     <div class="main-container">
         <div class="info-container">
-            <button>click here</button>
+            <div class="slide">
+                <input type="range" name="slider" id="range-slider" value="2" min="1" max="100">
+                <p class="rangeSliderValue">2</p>
+            </div>
             <button>change color</button>
         </div>
         <div class="drawing-container">
