--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <div class="main-container">
         <div class="info-container">
             <div class="slide">
-                <input type="range" name="slider" id="range-slider" value="2" min="1" max="100">
-                <p class="rangeSliderValue">2</p>
+                <h3>Slide for Grid</h3>
+                <input type="range" name="slider" id="range-slider" value="16" min="1" max="100">
+                <p>value: <span class="rangeSliderValue">16</span></p>
             </div>
-            <button>change color</button>
+            <button class="changingColor">Draw</button>
         </div>
         <div class="drawing-container">
             
