--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <p>value: <span class="rangeSliderValue">16</span></p>
             </div>
             <button class="changingColor">Draw</button>
+            <button class="clear-all">Clear</button>
         </div>
         <div class="drawing-container">
             
