--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
                 <input type="range" name="slider" id="range-slider" value="16" min="1" max="100">
                 <p>value: <span class="rangeSliderValue">16</span></p>
             </div>
-            <button class="changingColor">Draw</button>
-            <button class="clear-all">Clear</button>
+            <button class="changingColor">DRAW</button>
+            <button class="randomizer">RANDOMIZER</button>
+            <button class="rainbowColor">VIBGYOR</button>
+            <label for="colorPicker">Pick yourself</label>
+            <input type="color", value="#FF7F00" class="colorPicker">
+            <button class="clear-all">CLEAR</button>
         </div>
         <div class="drawing-container">
-            
+
         </div>
     </div>
 </body>
