created some str

--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
                 <input type="range" name="slider" id="range-slider" value="16" min="1" max="100">
                 <p>value: <span class="rangeSliderValue">16</span></p>
             </div>
+            <div class="brightslider">
+                <h3>Slide for brightness</h3>
+                <input type="range" id="brightnessSlider" min = '0' max = '2' step="0.1" value="1">
+            </div>
             <button class="changingColor">DRAW</button>
             <button class="randomizer">RANDOMIZER</button>
             <button class="rainbowColor">VIBGYOR</button>
             <label for="colorPicker">Pick yourself</label>
             <input type="color", value="#FF7F00" class="colorPicker">
+            <button class="clearPixels">REMOVE PIXELS</button>
             <button class="clear-all">CLEAR</button>
         </div>
         <div class="drawing-container">
