--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
                 <h3>Slide for brightness</h3>
                 <input type="range" id="brightnessSlider" min = '0' max = '2' step="0.1" value="1">
             </div>
-            <button class="changingColor">DRAW</button>
-            <button class="randomizer">RANDOMIZER</button>
-            <button class="rainbowColor">VIBGYOR</button>
+            <button class="changingColor" id="main-button">DRAW</button>
+            <button class="randomizer" id="main-button">RANDOMIZER</button>
+            <button class="rainbowColor" id="main-button">VIBGYOR</button>
             <label for="colorPicker">Pick yourself</label>
             <input type="color", value="#FF7F00" class="colorPicker">
-            <button class="clearPixels">REMOVE PIXELS</button>
-            <button class="clear-all">CLEAR</button>
+            <button class="clearPixels" id="main-button">REMOVE PIXELS</button>
+            <button class="clear-all" id="main-button">CLEAR</button>
+            <button class="stop-all">STOP</button>
         </div>
         <div class="drawing-container">
 
