--- a/index.html
+++ b/index.html
@@ -5,20 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch A Sketch</title>
     <link rel="stylesheet" href="etch.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Borel&family=Dancing+Script&family=Handjet&family=Hind:wght@300&family=Preahvihear&family=Press+Start+2P&family=Shadows+Into+Light&family=Titillium+Web:wght@300&family=Yatra+One&display=swap" rel="stylesheet">
     <script src="etch.js" defer></script>
 </head>
 <body>
     <header>Etch-a-Sketch</header>
     <div class="main-container">
+        <div class="drawing-container">
+
+        </div>
         <div class="info-container">
-            <div class="slide">
-                <h3>Slide for Grid</h3>
-                <input type="range" name="slider" id="range-slider" value="16" min="1" max="100">
-                <p>value: <span class="rangeSliderValue">16</span></p>
-            </div>
-            <div class="brightslider">
-                <h3>Slide for brightness</h3>
-                <input type="range" id="brightnessSlider" min = '0' max = '2' step="0.1" value="1">
+            <div class="slider-group">
+                <div class="slide">
+                    <h3>Slide for Grid</h3>
+                    <input type="range" name="slider" id="range-slider" value="10" min="1" max="100">
+                    <p>value: <span class="rangeSliderValue">10</span></p>
+                </div>
+                <div class="brightslider">
+                    <h3>Slide for brightness</h3>
+                    <input type="range" id="brightnessSlider" min = '0' max = '2' step="0.1" value="1">
+                </div>
             </div>
             <button class="changingColor" id="main-button">DRAW</button>
             <button class="randomizer" id="main-button">RANDOMIZER</button>
@@ -27,10 +35,7 @@
             <input type="color", value="#FF7F00" class="colorPicker">
             <button class="clearPixels" id="main-button">REMOVE PIXELS</button>
             <button class="clear-all" id="main-button">CLEAR</button>
-            <button class="stop-all">STOP</button>
-        </div>
-        <div class="drawing-container">
-
+            <button class="stop-all">ERASER</button>
         </div>
     </div>
 </body>
