--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Borel&family=Dancing+Script&family=Handjet&family=Hind:wght@300&family=Preahvihear&family=Press+Start+2P&family=Shadows+Into+Light&family=Titillium+Web:wght@300&family=Yatra+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@500&display=swap" rel="stylesheet">
     <script src="etch.js" defer></script>
 </head>
 <body>
@@ -19,23 +22,28 @@
         <div class="info-container">
             <div class="slider-group">
                 <div class="slide">
-                    <h3>Slide for Grid</h3>
-                    <input type="range" name="slider" id="range-slider" value="10" min="1" max="100">
+                    <h3 class="heading">Slide for Grid</h3>
+                    <input type="range" name="slider" id="range-slider" value="10" min="1" max="64">
                     <p>value: <span class="rangeSliderValue">10</span></p>
                 </div>
                 <div class="brightslider">
-                    <h3>Slide for brightness</h3>
+                    <h3 class="heading">Slide for brightness</h3>
                     <input type="range" id="brightnessSlider" min = '0' max = '2' step="0.1" value="1">
+                    <p>value: <span class="controlBrightness">1</span></p>
                 </div>
             </div>
-            <button class="changingColor" id="main-button">DRAW</button>
-            <button class="randomizer" id="main-button">RANDOMIZER</button>
-            <button class="rainbowColor" id="main-button">VIBGYOR</button>
-            <label for="colorPicker">Pick yourself</label>
-            <input type="color", value="#FF7F00" class="colorPicker">
-            <button class="clearPixels" id="main-button">REMOVE PIXELS</button>
-            <button class="clear-all" id="main-button">CLEAR</button>
-            <button class="stop-all">ERASER</button>
+            <div class="pileOfButtons">
+                <button class="changingColor" id="main-button">DRAW</button>
+                <button class="randomizer" id="main-button">RANDOM</button>
+                <button class="rainbowColor" id="main-button">VIBGYOR</button>
+                <div class="color-pick">
+                    <label for="colorPicker">Pick yourself</label>
+                    <input type="color", value="#FF7F00" class="colorPicker" >
+                </div>
+                <button class="clearPixels" id="main-button">REMOVE PIXELS</button>
+                <button class="clear-all" id="main-button">CLEAR</button>
+                <button class="stop-all">ERASER</button>
+            </div>
         </div>
     </div>
 </body>
